--- a/static/css/bot.css
+++ b/static/css/bot.css
@@ -2,15 +2,18 @@
     margin: 0;
 }
 
+body {
+    background-color: #C95E21;
+}
+
 div.bot {
-    background-color: #337B00;
     width: 100%;
     height: 100%;
 }
 
 div.bot > div {
     max-width: 80%;
-    background-color: #56BB0E;
+    background-color: #FFA978;
     padding: 10px;
     border-radius: 5px;
     margin: 5px;
@@ -21,11 +24,45 @@ div.bot > div:not(.human) {
 }
 
 div.bot > div.human {
-    background-color: #235500;
+    background-color: #7B2C00;
     color: white;
     margin-left: auto;
 }
 
+a {
+    color: black;
+}
+
 div.bot > div.human a {
     color: white;
+}
+
+input[type=text] {
+    background-color: initial;
+    border: none;
+    border-bottom: 1px solid white;
+    color: white;
+    margin-bottom: 1px;
+    margin-top: 2px;
+}
+
+input[type=text]:focus {
+    outline: none;
+    border-width: 2px;
+    margin-bottom: 0px;
+}
+
+input[type=submit] {
+    background-color: initial;
+    border: 1px solid white;
+    color: white;
+    margin: 1px;
+    margin-left: 6px;
+    border-radius: 5px;
+}
+
+input[type=submit]:active {
+    margin: 0px;
+    margin-left: 5px;
+    border-width: 2px;
 }
