Fonts and selection colors

--- a/static/css/bot.css
+++ b/static/css/bot.css
@@ -1,5 +1,11 @@
 * {
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+
+::selection {
+    background-color: #C95E21;
+    color: white;
 }
 
 body {
