--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Circe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/bot.css">
     <link rel="stylesheet" href="/css/bot_standalone.css">
     <link rel="shortcut icon" href="/favicon.ico">
