Better templating and uncompilable-bot error handling.

--- a/templates/bot.html
+++ b/templates/bot.html
@@ -1,27 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{name}}{% if embed %} (embedded){% endif %}</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/bot.css">
+{% extends "base.html" %}
+{% block title %}{{name}}{% if embed %} (embedded){% endif %}{% endblock %}
+{% block head %}
     {% if not embed %}
         <link rel="stylesheet" href="/css/bot_standalone.css">
     {% endif %}
     <script type="text/javascript" src="/js/botengine.js"></script>
     {{ compile_bot(name) | safe }}
-    <link rel="shortcut icon" href="/favicon.ico">
-</head>
-<body>
-    <div id="bot" class="bot">
-        Bot loading...
-        <noscript>
-            This bot requires JavaScript.  See <a href="https://www.enable-javascript.com/" target="_blank">here</a> for instructions to enable it.
-        </noscript>
-    </div>
+{% endblock %}
+{% block bot %}
+    Bot loading...
+    <noscript>
+        This bot requires JavaScript.  See <a href="https://www.enable-javascript.com/" target="_blank">here</a> for instructions to enable it.
+    </noscript>
+{% endblock %}
+{% block foot %}
     <script type="text/javascript">
         launch_bot("bot");
     </script>
-</body>
-</html>
+{% endblock %}
