--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Circe</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/bot.css">
-    <link rel="stylesheet" href="/css/bot_standalone.css">
-    <link rel="shortcut icon" href="/favicon.ico">
-</head>
-<body>
-    <div id="bot" class="bot">
-        <div>
-            <p>
-                Welcome to this Circe instance!
-            </p>
-        </div>
-        <div>
-            <p>
-                The following bots are available:
-            </p>
-        </div>
-        {% for bot in bots %}
-            <div class="human">
-                <p>
-                    <a href="/bot/{{bot}}">{{bot}}</a>
-                </p>
-            </div>
-        {% endfor %}
+{% extends "base.html" %}
+{% block bot %}
+    <div>
+        <p>
+            Welcome to this Circe instance!
+        </p>
     </div>
-</body>
-</html>
+    <div>
+        <p>
+            The following bots are available:
+        </p>
+    </div>
+    {% for bot in bots %}
+        <div class="human">
+            <p>
+                <a href="/bot/{{bot}}">{{bot}}</a>
+            </p>
+        </div>
+    {% endfor %}
+{% endblock %}
