Proper error handling

--- a/templates/bot_err.html
+++ b/templates/bot_err.html
@@ -1,12 +1,2 @@
-{% extends "base.html" %}
-{% block bot %}
-    <div>
-        <p>We either couldn't find or couldn't prepare the bot you wanted.</p>
-    </div>
-    <div>
-        <p>{{exception}}</p>
-    </div>
-    <div class="human">
-        <p><a href="/">Go to homepage</a></p>
-    </div>
-{% endblock %}
+{% extends "generic_err.html" %}
+{% block err_msg %}We either couldn't find or couldn't prepare the bot you wanted.{% endblock %}
