--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         {% for bot in bots %}
             <div class="human">
                 <p>
-                    <a href="/bot/{{bot}}">{{bot}}</a>
+                    <a href="/bot/{{bot|replace(" ", "%20")}}">{{bot}}</a>
                 </p>
             </div>
         {% endfor %}
